--- a/inotebook/backend/package.json
+++ b/inotebook/backend/package.json
@@ -4,13 +4,14 @@
   "description": "iNotebook- your notebook on the cloud",
   "main": "index.js",
   "scripts": {
-    "server":"nodemon server.js",
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
